# stubborn-watch

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/stubborn_watch/: __init__.py  __main__.py  cli.py  manifest.py  runner.py  watcher.py
src/stubborn_watch/doctor/: __init__.py  checks.py  models.py  report.py  run.py
tests/: test_doctor.py  test_watch.py
tests/fixtures/: two_documents.json  two_documents_merged.json
