[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stubborn-watch"
version = "0.1.0b2"
description = "Dev orchestration: file watch → SCIP indexer → stubborn index --merge"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Stubborn contributors" }]
keywords = ["scip", "watch", "java", "code-context", "stubborn"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "stubborn-stub>=0.9.0b5,<1.0",
    "typer>=0.12,<1.0",
    "watchdog>=4.0,<7.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9.0", "ruff>=0.9,<1"]

[project.scripts]
stubborn-watch = "stubborn_watch.cli:main"

[project.urls]
Homepage = "https://github.com/stubborn-ai/stubborn-watch"
Repository = "https://github.com/stubborn-ai/stubborn-watch"
Documentation = "https://github.com/stubborn-ai/stubborn-watch#readme"
Changelog = "https://github.com/stubborn-ai/stubborn-watch/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/stubborn_watch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["F", "I"]
